# fraud-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
dags/: fraud_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/fraud/: fraud_monitor_daily.sql
dbt/models/staging/: src_fraud.yml  stg_transactions.sql
images/: diagram.drawio
spark_jobs/: data_generator.py  etl_job.py  ingest_test.py
terraform/: main.tf  variables.tf
