[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "pyspark>=4.1.1",
    "dbt-bigquery>=1.11.0",
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-google>=20.0.0",
    "python-hcl2>=7.3.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
